--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "markdown-it": "^12.2.0",
-    "markdown-it-highlightjs": "^3.5.0"
+    "markdown-it-highlightjs": "^3.5.0",
+    "yieldparser": "^0.2.0"
   }
 }
