--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "markdown-it": "^12.2.0",
     "markdown-it-highlightjs": "^3.5.0",
+    "markdown-it-task-lists": "^2.1.1",
     "yieldparser": "^0.2.0"
   }
 }
