--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "markdown-it": "^12.2.0",
     "markdown-it-highlightjs": "^3.5.0",
     "markdown-it-task-lists": "^2.1.1",
+    "mime-db": "^1.50.0",
     "yieldparser": "^0.2.0"
   }
 }
