--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "A template for kick starting a Cloudflare Workers project",
   "main": "index.js",
   "scripts": {
-    "dev": "miniflare",
+    "dev": "miniflare --watch",
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write '**/*.{js,css,json,md}'"
   },
@@ -18,6 +18,7 @@
   "dependencies": {
     "itsybitsy": "^0.1.0",
     "markdown-it": "^12.2.0",
+    "markdown-it-front-matter": "^0.2.3",
     "markdown-it-highlightjs": "^3.5.0",
     "markdown-it-task-lists": "^2.1.1",
     "mime-db": "^1.50.0",
