--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,6 +3,9 @@ main = "index.js"
 compatibility_date = "2021-10-04"
 node_compat = true
 
+[dev]
+    port = 4321
+
 account_id = ""
 workers_dev = true
 routes = ["collected.press/*"]
