--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "markdown-it-task-lists": "^2.1.1",
     "mrmime": "^1.0.0",
     "wrangler": "^2.1.11",
+    "yaml": "^2.1.3",
     "yieldparser": "^0.3.0"
   }
 }
