--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "MIT",
   "devDependencies": {
     "@playwright/test": "^1.27.1",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "wrangler": "^2.2.1"
   },
   "dependencies": {
     "itsybitsy": "^0.1.0",
@@ -21,7 +22,6 @@
     "markdown-it-highlightjs": "^3.5.0",
     "markdown-it-task-lists": "^2.1.1",
     "mrmime": "^1.0.0",
-    "wrangler": "^2.1.11",
     "yaml": "^2.1.3",
     "yieldparser": "^0.3.0"
   }
