--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 name = "press"
 main = "index.js"
 compatibility_date = "2021-10-04"
+usage_model = "unbound"
 node_compat = true
 
 workers_dev = true
