--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "wrangler": "^2.4.0"
   },
   "dependencies": {
+    "date-fns": "^2.29.3",
     "itsybitsy": "^0.1.0",
     "markdown-it": "^13.0.1",
     "markdown-it-front-matter": "^0.2.3",
     "markdown-it-highlightjs": "^3.5.0",
     "markdown-it-task-lists": "^2.1.1",
     "mrmime": "^1.0.0",
+    "vhtml": "^2.2.0",
     "yaml": "^2.1.3",
     "yieldparser": "^0.3.0"
   }
