Publish types with package

--- a/packages/press-server/tsconfig.json
+++ b/packages/press-server/tsconfig.json
@@ -4,6 +4,7 @@
       "module": "esnext",
       "lib": ["esnext"],
       "moduleResolution": "node",
-      "types": ["@cloudflare/workers-types", "jest"]
+      "types": ["@cloudflare/workers-types", "jest"],
+      "allowSyntheticDefaultImports": true
     }
   }
