--- a/packages/press-server/package.json
+++ b/packages/press-server/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@collected/press-server",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "Render and serve Markdown directly from a GitHub repo",
   "source": "src/index.ts",
   "main": "dist/main.js",
   "module": "dist/module.js",
+  "types": "dist/types.d.ts",
   "exports": {
     ".": {
       "browser": "./dist/module.js",
@@ -37,6 +38,8 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20221111.1",
+    "@parcel/packager-ts": "^2.8.0",
+    "@parcel/transformer-typescript-types": "^2.8.0",
     "@swc/core": "^1.3.19",
     "@swc/jest": "^0.2.23",
     "@types/jest": "^29.2.3",
