Sort articles by date

--- a/packages/press-server/package.json
+++ b/packages/press-server/package.json
@@ -19,7 +19,8 @@
   "scripts": {
     "prepack": "npm run build",
     "build": "parcel build",
-    "test": "jest && tsc --noEmit && parcel build"
+    "test": "jest && tsc --noEmit && parcel build",
+    "dev": "wrangler dev tests/worker.ts"
   },
   "author": "Patrick Smith",
   "license": "MIT",
