--- a/packages/github-fetch/tsconfig.json
+++ b/packages/github-fetch/tsconfig.json
@@ -2,16 +2,10 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "esnext",
-    "lib": [
-      "esnext"
-    ],
+    "lib": ["esnext"],
     "moduleResolution": "node",
-    "types": [
-      "@cloudflare/workers-types"
-    ],
-    "allowSyntheticDefaultImports": true,
+    "types": ["@cloudflare/workers-types", "jest"],
+    "allowSyntheticDefaultImports": true
   },
-  "include": [
-    "src/**/*"
-  ]
-} 
+  "include": ["src/**/*"]
+}
