--- a/packages/press-server/tsconfig.json
+++ b/packages/press-server/tsconfig.json
@@ -2,16 +2,12 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "esnext",
-    "lib": [
-      "esnext"
-    ],
+    "lib": ["esnext"],
     "moduleResolution": "node",
-    "types": [
-      "@cloudflare/workers-types"
-    ],
+    "types": ["@cloudflare/workers-types"],
     "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "strictNullChecks": true
   },
-  "include": [
-    "src/**/*"
-  ]
-} 
+  "include": ["src/**/*"]
+}
