--- a/packages/press-server/package.json
+++ b/packages/press-server/package.json
@@ -44,6 +44,9 @@
     "@swc/core": "^1.4.11",
     "@swc/jest": "^0.2.36",
     "@types/jest": "^29.5.12",
+    "@types/markdown-it": "^13.0.7",
+    "@types/markdown-it-highlightjs": "^3.3.4",
+    "@types/vhtml": "^2.2.9",
     "chai": "^4.4.1",
     "html-rewriter-wasm": "^0.4.1",
     "jest": "^29.7.0",
